package com.iluwatar.query_object;

import lombok.RequiredArgsConstructor;

/**
 * Entity class of soldier with 2 attributes:
 * - Strength of the soldier
 * - Defence of the soldier
 */
@RequiredArgsConstructor
public class Soldier {
    public final int strength;
    public final int defence;
}
